# cc4102-tarea1

./: CMakeLists.txt  README.md
include/: DiskArray.hpp  DiskArrayQ.hpp  constrained_memory.hpp  fs_block.hpp  mergesort_disk.hpp  quicksort_disk.hpp
src/: fs_block.cpp  main.cpp  mergesort_disk.cpp  quicksort_disk.cpp
